--- a/side_project/mini_board/src/css/common.css
+++ b/side_project/mini_board/src/css/common.css
@@ -26,6 +26,11 @@ header > h1 {
 	font-size: 2rem;
 }
 
+.header-a {
+	color: #fff;
+	text-decoration-line: none;
+}
+
 table {
 	border-collapse: collapse;
 	width: 1000px;
@@ -56,7 +61,7 @@ tr, td {
 }
 
 section {
-	background-color: rgba(0,0,0,0.5);
+	background-color: rgba(0,0,0);
 	text-align: center;
 	border: 1px solid #929292;
 	width: 1000px;
@@ -72,6 +77,7 @@ section {
 section > a {
 	text-decoration: none;
 	display: inline-block;
+	/* border-radius: 25%; */
 }
 
 .page-btn {
@@ -79,5 +85,10 @@ section > a {
 	height: 50px;
 	text-align: center;
 	line-height: 50px;
+	color: #808080;
+}
+
+.page-btn:hover {
 	color: #fff;
+	/* background-color: #fff; */
 }
