--- a/side_project/mini_test/doc/design/style.css
+++ b/side_project/mini_test/doc/design/style.css
@@ -268,7 +268,8 @@ section {
 	height: 80px;
 	margin-bottom: 20px;
 	padding-top: 25px;
-	padding-left: 70px;
+	padding-left: 40px;
+	padding-right: 40px;
 	border-radius: 30px 30px 0px 0px;
 	font-size: 30px;
 	font-weight: bold;
@@ -278,14 +279,6 @@ section {
 	box-shadow: 0px 0px 30px 10px rgba(255, 255, 255, 0.5);
 }
 
-.content-grid {
-	display: grid;
-	grid-template-columns: 80px 600px 230px 200px;
-}
-
-.content-top-grid-1 {
-	display: grid;
-}
 /* -------------------------------------------- */
 
 /* -------------------------------------------- */
@@ -297,7 +290,8 @@ section {
 	height: 650px;
 	margin-bottom: 20px;
 	padding-top: 30px;
-	padding-left: 70px;
+	padding-left: 40px;
+	padding-right: 40px;
 	font-size: 25px;
 	font-weight: 600;
 	border-collapse: separate;
@@ -306,10 +300,16 @@ section {
 	box-shadow: 0px 0px 30px 10px rgba(255, 255, 255, 0.5);
 }
 
-.content-top-grid-span {
-	
+.content-table {
+	width: 100%;
+}
+
+.content-top-tr {
+	height: 80px;
+}
+
+.content-top-td {
 	height: 40px;
-	/* border-bottom: 1px solid #fff ; */
 	margin-bottom: 40px;
 }
 
@@ -319,7 +319,7 @@ section {
 	color: #3862BA;
 } */
 
-.content-grid:hover {
+.content-tr:hover {
 	transform: scale(1);
 	font-size: 2rem;
 	transition-duration: 0.3s;
