--- a/assignment/design/css/style.css
+++ b/assignment/design/css/style.css
@@ -1,10 +1,15 @@
+@font-face {
+    font-family: 'all';
+    src: url('../css/all.ttf') format('truetype');
+}
+
 * {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	font-family: 'Inter', sans-serif;
 	font-size: 25px;
 	font-weight: 600;
+	font-family: 'all';
 }
 
 /* reset.css */
@@ -60,15 +65,7 @@ input {
 body {
 	background-repeat: no-repeat;
 	background-size: cover;
-}
-
-main {
-	width: 1820px;
-	height: 950px;
-	background-color: rgba(255, 255, 255, 0.5);
-	border-radius: 0px 50px 50px 0px;
-	position: relative;
-	/* z-index: -1; */
+	background-image: url(../css/img/background.png);
 }
 
 button {
@@ -80,26 +77,183 @@ button {
 	border: none;
 }
 
+.background {
+	background-color: rgba(255, 255, 255, 0.8);
+}
+
 /* ************************************************************* */
 
 /* ************************************************************* */
-/* 공통 */
+/* 헤더 */
 .header {
-	background-color: aqua;
-	padding: 80px;
+	background-color: rgba(255, 255, 255, 0.8);
+	height: 85px; 
+	text-align: center;
+	padding-top: 15px;
+	padding-left: 30px;
+	padding-right: 30px;
+	line-height: 50px;
+}
+
+.user-icon {
+	background-image: url(../css/img/user.png);
+	width: 50px;
+	height: 50px;
+	float: left;
+}
+
+h1 {
+	display: inline-block;
+}
+
+.search-icon {
+	background-image: url(../css/img/search.png);
+	width: 50px;
+	height: 50px;
+	float: right;
+}
+/* ************************************************************* */
+
+/* ************************************************************* */
+/* 푸터 */
+.footer {
+	background-color: rgba(255, 255, 255, 0.8);
+	height: 85px;
+	padding-top: 15px;
+	padding-left: 30px;
+	line-height: 50px;
+	text-align: left;
+}
+
+.music-icon {
+	background-image: url(../css/img/music.png);
+	width: 50px;
+	height: 50px;
+	float: left;
+}
+
+.music-lyrics {
+	height: 50px;
+	margin-left: 70px;
+	background-color: antiquewhite;
+}
+/* ************************************************************* */
+
+/* ************************************************************* */
+/* 유저 페이지 */
+
+.user-main {
+	height: 880px;
+	padding-top: 250px;
+}
+
+.user-content {
+	margin: auto;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	justify-content: space-around;
 	text-align: center;
 }
 
-.main {
-	background-color: aquamarine;
-	height: 750px;
-	padding: 100px 300px 0px 300px;
+.user-character-jjanggu {
+	background-image: url(../css/img/jjanggu.png);
+	background-size: cover;
+	width: 300px;
+	height: 300px;
 }
 
-.content {
-	background-color: blanchedalmond;
+
+.user-character-cheolsu {
+	background-image: url(../css/img/cheolsu.png);
+	background-size: cover;
+	width: 300px;
+	height: 300px;
 }
 
-.footer {
-	background-color: blueviolet;
+.user-character-maenggu {
+	background-image: url(../css/img/maenggu.png);
+	background-size: cover;
+	width: 300px;
+	height: 300px;
+}
+
+.user-character-yuli {
+	background-image: url(../css/img/yuli.png);
+	background-size: cover;
+	width: 300px;
+	height: 300px;
+}
+
+.user_name {
+	margin: auto;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	justify-content: space-around;
+	text-align: center;
+	margin-top: 20px;
+}
+
+.user_name_gap {
+	margin-top: 320px;
+}
+/* ************************************************************* */
+
+/* ************************************************************* */
+/* 리스트 페이지 */
+
+.list-main {
+	height: 880px;
+	padding-top: 70px;
+}
+
+.list-content {
+	width: 1500px;
+	height: 700px;
+	margin: auto;
+	background-color: rgba(255, 255, 255, 0.5);
+	box-shadow: 0px 0px 50px 0px rgb(180, 180, 180)
+}
+
+.list-content table {
+	width: 1500px;
+	height: 100px;
+	/* background-color: #FE8F8F; */
+	line-height: 100px;
+	text-align: center;
+}
+
+.list-content table th {
+	background-color: #FE8F8F;
+}
+
+.list-content table td {
+	background-color: rgba(255, 255, 255, 0.5);
+}
+
+.list-content-btn:hover {
+	transform: scale(1);
+	font-size: 1.2rem;
+	transition-duration: 0.3s;
+	background-color: aliceblue;
+}
+
+.list-content-num-btn {
+	text-align: center;
+	height: 50px;
+	background-color: #FE8F8F;
+}
+
+.list-content-num-btn a {
+	display: inline-block;
+	line-height: 50px;
+	margin-right: 40px;
+	width: 50px;
+	height: 50px;
+	/* background-color: rgb(143, 143, 251); */
+}
+
+.list-content-num-btn a:last-child {
+	margin-right: 0px;
 }
