--- a/assignment/src/css/style.css
+++ b/assignment/src/css/style.css
@@ -287,3 +287,28 @@ button {
 	color: #FE8F8F;
 	background-color: rgba(255, 255, 255, 0.5);
 }
+/* ************************************************************* */
+
+/* ************************************************************* */
+/* 디테일 페이지 */
+.detail-main {
+	height: 880px;
+	padding-top: 50px;
+}
+
+.detail-content {
+	width: 1500px;
+	height: 770px;
+	margin: auto;
+	background-color: rgba(255, 255, 255, 0.3);
+	box-shadow: 0px 0px 50px 0px rgb(180, 180, 180);
+	position: relative;
+}
+
+.detail-content table th {
+	width: 300px;
+	height: 100px;
+	background-color: #fe8f8fda;
+	font-size: 25px;
+	color: #fff;
+}
