--- a/assignment/src/css/style.css
+++ b/assignment/src/css/style.css
@@ -303,12 +303,5 @@ button {
 	background-color: rgba(255, 255, 255, 0.3);
 	box-shadow: 0px 0px 50px 0px rgb(180, 180, 180);
 	position: relative;
-}
-
-.detail-content table th {
-	width: 300px;
-	height: 100px;
-	background-color: #fe8f8fda;
-	font-size: 25px;
-	color: #fff;
+	display: grid;
 }
