1029 과제 작성부

--- a/assignment/src/css/style.css
+++ b/assignment/src/css/style.css
@@ -32,6 +32,7 @@ time, mark, audio, video {
     font: inherit;
     vertical-align: baseline;
 	text-decoration-line: none;
+	font-size: 25px;
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
@@ -82,6 +83,33 @@ button {
 	background-color: rgba(255, 255, 255, 0.5);
 }
 
+.background-color-1 {
+	background-color: #fe8f8fda;
+}
+
+.background-color-2 {
+	background-color: #71c7f9d2;
+}
+
+.background-color-3 {
+	background-color: #f6cd64c6;
+}
+
+.background-color-4 {
+	background-color: #fe8fb8d3;
+}
+
+input:focus {outline: 2px solid #d50000;} /* outline 테두리 속성 수정 */
+input:focus {outline: none;} /* outline 테두리 없애기 */
+
+textarea{
+	resize: none;
+	border: none;
+	background-color: transparent;
+}
+textarea:focus {
+	outline: none;
+}
 /* ************************************************************* */
 
 /* ************************************************************* */
@@ -111,12 +139,50 @@ button {
 	font-weight: 600;
 }
 
+.header-b {
+	display: inline-block;
+	font-size: 40px;
+	color:#71c7f9;
+	font-weight: 600;
+}
+
+.header-c {
+	display: inline-block;
+	font-size: 40px;
+	color:#f6cc64;
+	font-weight: 600;
+}
+
+.header-d {
+	display: inline-block;
+	font-size: 40px;
+	color:#FE8FB7;
+	font-weight: 600;
+}
+
+.header-e {
+	display: inline-block;
+	font-size: 40px;
+	color:#303030;
+	font-weight: 600;
+}
+
+.search-insert {
+	background-image: url(/assignment/src/css/img/insert.png);
+	width: 45px;
+	height: 45px;
+	float: right;
+	cursor: pointer;
+	margin-top: 3px;
+}
+
 .search-icon {
 	background-image: url(/assignment/src/css/img/search.png);
 	width: 50px;
 	height: 50px;
 	float: right;
 	cursor: pointer;
+	margin-left: 30px;
 }
 /* ************************************************************* */
 
@@ -167,13 +233,20 @@ button {
 	background-size: cover;
 	width: 300px;
 	height: 300px;
+	border-radius: 300px;
+	cursor: pointer;
+	opacity: 50%;
 }
+
 
 .user-character-cheolsu {
 	background-image: url(/assignment/src/css/img/cheolsu.png);
 	background-size: cover;
 	width: 300px;
 	height: 300px;
+	border-radius: 300px;
+	cursor: pointer;
+	opacity: 50%;
 }
 
 .user-character-maenggu {
@@ -181,6 +254,9 @@ button {
 	background-size: cover;
 	width: 300px;
 	height: 300px;
+	border-radius: 300px;
+	cursor: pointer;
+	opacity: 50%;
 }
 
 .user-character-yuli {
@@ -188,6 +264,17 @@ button {
 	background-size: cover;
 	width: 300px;
 	height: 300px;
+	border-radius: 300px;
+	cursor: pointer;
+	opacity: 50%;
+}
+
+.user-character:hover {
+	background-color: #FE8F8F;
+	opacity: 100%;
+	box-shadow: 0px 0px 50px 10px rgb(128, 128, 128);
+	transform: scale(1.2);
+	transition-duration: 0.5s;
 }
 
 .user_name {
@@ -233,8 +320,26 @@ button {
 	text-align: center;
 }
 
-.list-content table th {
+.list-content-1 table th {
 	background-color: #fe8f8fda;
+	font-size: 25px;
+	color: #fff;
+}
+
+.list-content-2 table th {
+	background-color: #71c7f9d2;
+	font-size: 25px;
+	color: #fff;
+}
+
+.list-content-3 table th {
+	background-color: #f6cd64c6;
+	font-size: 25px;
+	color: #fff;
+}
+
+.list-content-4 table th {
+	background-color: #fe8fb8d3;
 	font-size: 25px;
 	color: #fff;
 }
@@ -243,6 +348,7 @@ button {
 	background-color: rgba(255, 255, 255, 0.3);
 	color: rgba(0, 0, 0, 0.8);
 }
+
 
 .list-content-btn {
 	cursor: pointer;
@@ -261,11 +367,16 @@ button {
 .list-content-num-btn {
 	text-align: center;
 	height: 70px;
-	background-color: #fe8f8fda;
 	position: absolute;
 	bottom: -70px;
 	width: 100%;
 	padding: 10px;
+}
+
+.list-content-num-btn a:hover {
+	transform: scale(1.2);
+	transition-duration: 0.3s;
+	color: #ffffffda;
 }
 
 .list-content-num-btn a {
@@ -274,7 +385,7 @@ button {
 	margin-right: 40px;
 	width: 50px;
 	height: 50px;
-	color: #fff;
+	color: #ffffff73;
 	/* background-color: rgb(143, 143, 251); */
 }
 
@@ -287,6 +398,7 @@ button {
 	color: #FE8F8F;
 	background-color: rgba(255, 255, 255, 0.5);
 }
+
 /* ************************************************************* */
 
 /* ************************************************************* */
@@ -294,14 +406,205 @@ button {
 .detail-main {
 	height: 880px;
 	padding-top: 50px;
+	padding-left: 260px;
+	padding-right: 260px;
+	display: grid;
+	grid-template-columns: 1420px 90px;
 }
 
 .detail-content {
+	width: 1420px;
+	height: 770px;
+	/* margin: auto; */
+	background-color: rgba(255, 255, 255, 0.3);
+	box-shadow: 0px 0px 50px 0px rgb(180, 180, 180);
+	display: grid;
+	grid-template-columns: 300px 455px 300px 370px;
+	grid-template-rows: 100px 100px 570px;
+	place-items: center;
+}
+
+.detail-color-title-1 {
+	width: 300px;
+	height: 100px;
+	/* background-color: #fe8f8fda; */
+	text-align: center;
+	line-height: 100px;
+	border: 1px solid #00000025;
+	color: #fff;
+}
+
+.detail-color-title-2 {
+	width: 300px;
+	height: 570px;
+	/* background-color: #fe8f8fda; */
+	text-align: center;
+	line-height: 80px;
+	border: 1px solid #00000025;
+	color: #fff;
+}
+
+.detail-color-content-1 {
+	width: 455px;
+	height: 100px;
+	text-align: center;
+	line-height: 100px;
+	background-color: rgba(255, 255, 255, 0.3);
+	border: 1px solid #00000025;
+}
+
+.detail-color-content-2 {
+	width: 370px;
+	height: 100px;
+	text-align: center;
+	line-height: 100px;
+	background-color: rgba(255, 255, 255, 0.3);
+	border: 1px solid #00000025;
+}
+
+.detail-color-content-3 {
+	width: 370px;
+	height: 100px;
+	text-align: center;
+	line-height: 100px;
+	background-color: rgba(255, 255, 255, 0.3);
+	border: 1px solid #00000025;
+}
+
+
+.merged {
+	grid-column: span 3; 
+	width: 1130px;
+	height: 570px;
+	padding: 30px;
+	background-color: rgba(255, 255, 255, 0.3);
+	border: 1px solid #00000025;
+}
+
+
+.detail-content-icon {
+	width: 90px;
+	height: 770px;
+	/* background-color: #FE8F8F; */
+	border: 1px solid #00000025;
+	padding: 20px;
+}
+
+.icon-1 {
+	width: 50px;
+	height: 54px;
+	background-image: url(/assignment/src/css/img/before.png);
+	background-size: cover;
+	margin-top: 212px;
+	cursor: pointer;
+}
+.icon-2 {
+	width: 50px;
+	height: 51px;
+	background-image: url(/assignment/src/css/img/correction.png);
+	background-size: cover;
+	margin-top: 60px;
+	cursor: pointer;
+}
+.icon-3 {
+	width: 50px;
+	height: 51px;
+	background-image: url(/assignment/src/css/img/clear.png);
+	background-size: cover;
+	margin-top: 60px;
+	cursor: pointer;
+}
+/* ************************************************************* */
+
+/* ************************************************************* */
+/* 디테일 페이지 */
+
+.insert-main {
+	height: 880px;
+	padding-top: 50px;
+}
+
+.insert-content {
 	width: 1500px;
 	height: 770px;
 	margin: auto;
 	background-color: rgba(255, 255, 255, 0.3);
 	box-shadow: 0px 0px 50px 0px rgb(180, 180, 180);
 	position: relative;
+	padding-right: 80px;
 	display: grid;
+	grid-template-columns: 300px 1110px;
+	grid-template-rows: 100px 100px 570px;
+	place-items: center;
+}
+
+/* .insert-content-item {
+	border: 1px solid #00000025;
+	padding: 20px;
+} */
+
+.insert-color-title-1 {
+	width: 300px;
+	height: 100px;
+	/* background-color: #fe8f8fda; */
+	text-align: center;
+	line-height: 100px;
+	border: 1px solid #00000025;
+	color: #fff;
+}
+
+.insert-color-title-2 {
+	width: 300px;
+	height: 570px;
+	/* background-color: #fe8f8fda; */
+	text-align: center;
+	line-height: 100px;
+	border: 1px solid #00000025;
+	color: #fff;
+}
+
+.insert-color-content-1 {
+	width: 1110px;
+	height: 100px;
+	text-align: center;
+	line-height: 100px;
+	background-color: rgba(255, 255, 255, 0.3);
+	border: 1px solid #00000025;
+}
+
+.insert-color-content-1 input {
+	width: 1000px;
+	height: 80px;
+	/* background-color: #71c7f9; */
+	text-align: center;
+	padding-top: 20px;
+	font-size: 25px;
+}
+
+.insert-color-content-2 textarea {
+	width: 1000px;
+	height: 540px;
+	/* background-color: #71c7f9; */
+	text-align: center;
+	padding-top: 20px;
+	font-size: 25px;
+}
+
+.insert-color-content-2 {
+	width: 1110px;
+	height: 570px;
+	text-align: center;
+	line-height: 100px;
+	background-color: rgba(255, 255, 255, 0.3);
+	border: 1px solid #00000025;
+}
+
+
+
+.insert-btn {
+	width: 90px;
+	height: 770px;
+	position: absolute;
+	left: 1410px;
+	top: 0px;
 }
