--- a/assignment/src/css/style.css
+++ b/assignment/src/css/style.css
@@ -190,11 +190,14 @@ textarea:focus {
 /* 푸터 */
 .footer {
 	background-color: rgba(255, 255, 255, 0.8);
+	width: 100%;
 	height: 85px;
 	padding-top: 15px;
 	padding-left: 30px;
 	line-height: 50px;
 	text-align: left;
+	position:absolute;
+	bottom:0px;
 }
 
 .music-icon {
@@ -299,8 +302,8 @@ textarea:focus {
 /* 리스트 페이지 */
 
 .list-main {
-	height: 880px;
-	padding-top: 50px;
+	height: 855px;
+	padding-top: 30px;
 }
 
 .list-content {
@@ -347,6 +350,10 @@ textarea:focus {
 .list-content table td {
 	background-color: rgba(255, 255, 255, 0.3);
 	color: rgba(0, 0, 0, 0.8);
+	overflow:hidden;
+	white-space:nowrap;
+	text-overflow:ellipsis;
+	max-width:130px;
 }
 
 
@@ -406,14 +413,14 @@ textarea:focus {
 .detail-main {
 	height: 880px;
 	padding-top: 50px;
-	padding-left: 260px;
-	padding-right: 260px;
+	padding-left: 210px;
+	padding-right: 210px;
 	display: grid;
 	grid-template-columns: 1420px 90px;
 }
 
 .detail-content {
-	width: 1420px;
+	width: 1500px;
 	height: 770px;
 	/* margin: auto; */
 	background-color: rgba(255, 255, 255, 0.3);
@@ -451,6 +458,9 @@ textarea:focus {
 	line-height: 100px;
 	background-color: rgba(255, 255, 255, 0.3);
 	border: 1px solid #00000025;
+	overflow:hidden;
+	white-space:nowrap;
+	text-overflow:ellipsis;
 }
 
 .detail-color-content-2 {
@@ -483,11 +493,11 @@ textarea:focus {
 
 
 .detail-content-icon {
-	width: 90px;
+	width: 80px;
 	height: 770px;
 	/* background-color: #FE8F8F; */
 	border: 1px solid #00000025;
-	padding: 20px;
+	padding: 15px;
 }
 
 .icon-1 {
@@ -497,7 +507,13 @@ textarea:focus {
 	background-size: cover;
 	margin-top: 212px;
 	cursor: pointer;
+	opacity: 50%;
 }
+
+.icon-1:hover {
+	opacity: 100%;
+}
+
 .icon-2 {
 	width: 50px;
 	height: 51px;
@@ -505,7 +521,13 @@ textarea:focus {
 	background-size: cover;
 	margin-top: 60px;
 	cursor: pointer;
+	opacity: 50%;
 }
+
+.icon-2:hover {
+	opacity: 100%;
+}
+
 .icon-3 {
 	width: 50px;
 	height: 51px;
@@ -513,11 +535,16 @@ textarea:focus {
 	background-size: cover;
 	margin-top: 60px;
 	cursor: pointer;
+	opacity: 50%;
+}
+
+.icon-3:hover {
+	opacity: 100%;
 }
 /* ************************************************************* */
 
 /* ************************************************************* */
-/* 디테일 페이지 */
+/* 작성 페이지 */
 
 .insert-main {
 	height: 880px;
@@ -599,12 +626,24 @@ textarea:focus {
 	border: 1px solid #00000025;
 }
 
-
-
 .insert-btn {
 	width: 90px;
 	height: 770px;
 	position: absolute;
 	left: 1410px;
 	top: 0px;
+	padding: 20px;
+}
+
+.insert-btn button {
+	width: 50px;
+	height: 50px;
+	background-image: url(/assignment/src/css/img/insert-icon.png);
+	margin-top: 345px;
+	cursor: pointer;
+	opacity: 50%;
+}
+
+.insert-btn button:hover {
+	opacity: 100%;
 }
