--- a/assignment/src/css/style.css
+++ b/assignment/src/css/style.css
@@ -113,6 +113,40 @@ textarea:focus {
 /* ************************************************************* */
 
 /* ************************************************************* */
+/* 모달 */
+#modal {
+	position: fixed;
+	z-index: 1;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	overflow: auto;
+	background-color: rgba(0, 0, 0, 0.4);
+	display: none;
+}
+.modal-content {
+	background-color: #fefefe;
+	margin: 15% auto;
+	padding: 20px;
+	border: 1px solid #888;
+	width: 80%;
+}
+.close {
+	color: #aaa;
+	float: right;
+	font-size: 28px;
+	font-weight: bold;
+}
+.close:hover,
+.close:focus {
+	color: black;
+	text-decoration: none;
+	cursor: pointer;
+}
+/* ************************************************************* */
+
+/* ************************************************************* */
 /* 헤더 */
 .header {
 	background-color: rgba(255, 255, 255, 0.8);
@@ -302,7 +336,7 @@ textarea:focus {
 /* 리스트 페이지 */
 
 .list-main {
-	height: 855px;
+	height: 940px;
 	padding-top: 30px;
 }
 
@@ -317,9 +351,9 @@ textarea:focus {
 
 .list-content table {
 	width: 1500px;
-	height: 100px;
+	height: 99px;
 	/* background-color: #FE8F8F; */
-	line-height: 100px;
+	line-height: 99px;
 	text-align: center;
 }
 
@@ -354,6 +388,9 @@ textarea:focus {
 	white-space:nowrap;
 	text-overflow:ellipsis;
 	max-width:130px;
+	border: 1px solid #ffffffbe;
+	padding-left: 20px;
+	padding-right: 20px;
 }
 
 
@@ -411,7 +448,7 @@ textarea:focus {
 /* ************************************************************* */
 /* 디테일 페이지 */
 .detail-main {
-	height: 880px;
+	height: 966px;
 	padding-top: 50px;
 	padding-left: 210px;
 	padding-right: 210px;
@@ -429,6 +466,7 @@ textarea:focus {
 	grid-template-columns: 300px 455px 300px 370px;
 	grid-template-rows: 100px 100px 570px;
 	place-items: center;
+	border: 1px solid #ffffffbe;
 }
 
 .detail-color-title-1 {
@@ -437,18 +475,23 @@ textarea:focus {
 	/* background-color: #fe8f8fda; */
 	text-align: center;
 	line-height: 100px;
-	border: 1px solid #00000025;
+	border: 1px solid #ffffffbe;
 	color: #fff;
+	border-right: none;
+	border-left: none;
+	border-top: none;
 }
 
 .detail-color-title-2 {
 	width: 300px;
 	height: 570px;
-	/* background-color: #fe8f8fda; */
 	text-align: center;
 	line-height: 80px;
-	border: 1px solid #00000025;
+	border: 1px solid #ffffffbe;
 	color: #fff;
+	border-right: none;
+	border-left: none;
+	border-top: none;
 }
 
 .detail-color-content-1 {
@@ -457,10 +500,13 @@ textarea:focus {
 	text-align: center;
 	line-height: 100px;
 	background-color: rgba(255, 255, 255, 0.3);
-	border: 1px solid #00000025;
+	border: 1px solid #ffffffbe;
 	overflow:hidden;
 	white-space:nowrap;
 	text-overflow:ellipsis;
+	border-top: none;
+	border-right: none;
+	border-left: none;
 }
 
 .detail-color-content-2 {
@@ -469,7 +515,10 @@ textarea:focus {
 	text-align: center;
 	line-height: 100px;
 	background-color: rgba(255, 255, 255, 0.3);
-	border: 1px solid #00000025;
+	border: 1px solid #ffffffbe;
+	border-top: none;
+	border-right: none;
+	border-left: none;
 }
 
 .detail-color-content-3 {
@@ -478,25 +527,37 @@ textarea:focus {
 	text-align: center;
 	line-height: 100px;
 	background-color: rgba(255, 255, 255, 0.3);
-	border: 1px solid #00000025;
+	border: 1px solid #ffffffbe;
+	border-top: none;
+	border-right: none;
+	border-left: none;
 }
 
 
 .merged {
 	grid-column: span 3; 
-	width: 1130px;
+	width: 1125px;
 	height: 570px;
 	padding: 30px;
 	background-color: rgba(255, 255, 255, 0.3);
-	border: 1px solid #00000025;
+	border: 1px solid #ffffffbe;
+	border-bottom: none;
+}
+
+.merged-2 {
+	grid-column: span 3; 
+	width: 1125px;
+	height: 100px;
+	padding-left: 30px;
+	padding-right: 30px;
 }
 
 
 .detail-content-icon {
 	width: 80px;
-	height: 770px;
+	height: 771px;
 	/* background-color: #FE8F8F; */
-	border: 1px solid #00000025;
+	border: 1px solid #ffffffbe;
 	padding: 15px;
 }
 
@@ -547,7 +608,7 @@ textarea:focus {
 /* 작성 페이지 */
 
 .insert-main {
-	height: 880px;
+	height: 966px;
 	padding-top: 50px;
 }
 
@@ -647,3 +708,150 @@ textarea:focus {
 .insert-btn button:hover {
 	opacity: 100%;
 }
+
+/* ************************************************************* */
+
+/* ************************************************************* */
+/* 삭제 페이지 */
+
+.delete-main {
+	height: 966px;
+	padding-top: 50px;
+	padding-left: 210px;
+	padding-right: 210px;
+	display: grid;
+	grid-template-columns: 1420px 90px;
+}
+
+.delete-content {
+	width: 1500px;
+	height: 770px;
+	/* margin: auto; */
+	background-color: rgba(255, 255, 255, 0.3);
+	box-shadow: 0px 0px 50px 0px rgb(180, 180, 180);
+	display: grid;
+	grid-template-columns: 300px 455px 300px 370px;
+	grid-template-rows: 100px 100px 570px;
+	place-items: center;
+	border: 1px solid #ffffffbe;
+}
+
+.delete-color-title-1 {
+	width: 300px;
+	height: 100px;
+	/* background-color: #fe8f8fda; */
+	text-align: center;
+	line-height: 100px;
+	border: 1px solid #ffffffbe;
+	color: #fff;
+	border-right: none;
+	border-left: none;
+	border-top: none;
+}
+
+.delete-color-title-2 {
+	width: 300px;
+	height: 570px;
+	text-align: center;
+	line-height: 80px;
+	border: 1px solid #ffffffbe;
+	color: #fff;
+	border-right: none;
+	border-left: none;
+	border-top: none;
+}
+
+.delete-color-content-1 {
+	width: 455px;
+	height: 100px;
+	text-align: center;
+	line-height: 100px;
+	background-color: rgba(255, 255, 255, 0.3);
+	border: 1px solid #ffffffbe;
+	overflow:hidden;
+	white-space:nowrap;
+	text-overflow:ellipsis;
+	border-top: none;
+	border-right: none;
+	border-left: none;
+}
+
+.delete-color-content-2 {
+	width: 370px;
+	height: 100px;
+	text-align: center;
+	line-height: 100px;
+	background-color: rgba(255, 255, 255, 0.3);
+	border: 1px solid #ffffffbe;
+	border-top: none;
+	border-right: none;
+	border-left: none;
+}
+
+.delete-color-content-3 {
+	width: 370px;
+	height: 100px;
+	text-align: center;
+	line-height: 100px;
+	background-color: rgba(255, 255, 255, 0.3);
+	border: 1px solid #ffffffbe;
+	border-top: none;
+	border-right: none;
+	border-left: none;
+}
+
+
+.merged {
+	grid-column: span 3; 
+	width: 1125px;
+	height: 570px;
+	padding: 30px;
+	background-color: rgba(255, 255, 255, 0.3);
+	border: 1px solid #ffffffbe;
+	border-bottom: none;
+}
+
+.merged-2 {
+	grid-column: span 3; 
+	width: 1125px;
+	height: 100px;
+	padding-left: 30px;
+	padding-right: 30px;
+}
+
+.delete-content-icon {
+	width: 80px;
+	height: 771px;
+	/* background-color: #FE8F8F; */
+	border: 1px solid #ffffffbe;
+	padding: 15px;
+}
+
+.delete-icon-1 {
+	width: 50px;
+	height: 54px;
+	background-image: url(/assignment/src/css/img/before.png);
+	background-size: cover;
+	margin-top: 268px;
+	cursor: pointer;
+	opacity: 50%;
+}
+
+.delete-icon-1:hover {
+	opacity: 100%;
+}
+
+.delete-icon-3 {
+	width: 50px;
+	height: 51px;
+	background-image: url(/assignment/src/css/img/clear.png);
+	background-size: cover;
+	margin-top: 60px;
+	cursor: pointer;
+	opacity: 50%;
+}
+
+.delete-icon-3:hover {
+	opacity: 100%;
+}
+/* ************************************************************* */
