--- a/assignment/src/css/style.css
+++ b/assignment/src/css/style.css
@@ -225,12 +225,13 @@ textarea:focus {
 .footer {
 	background-color: rgba(255, 255, 255, 0.8);
 	width: 100%;
-	height: 85px;
+	/* height: 85px; */
+	padding-bottom: 20px;
 	padding-top: 15px;
 	padding-left: 30px;
 	line-height: 50px;
 	text-align: left;
-	position:absolute;
+	position:fixed;
 	bottom:0px;
 }
 
