--- a/assignment/src/css/style.css
+++ b/assignment/src/css/style.css
@@ -219,7 +219,11 @@ textarea:focus {
 	margin-left: 30px;
 }
 /* ************************************************************* */
+/* ************************************************************* */
+/* 모달 */
 
+
+/* ************************************************************* */
 /* ************************************************************* */
 /* 푸터 */
 .footer {
