--- a/assignment/src/css/style.css
+++ b/assignment/src/css/style.css
@@ -113,70 +113,6 @@ textarea:focus {
 /* ************************************************************* */
 
 /* ************************************************************* */
-/* 모달 */
-#modal {
-	position: fixed;
-	z-index: 1;
-	left: 0;
-	top: 0;
-	width: 100%;
-	height: 100%;
-	overflow: auto;
-	background-color: rgba(0, 0, 0, 0.4);
-	display: none;
-}
-.modal-content {
-	background-color: #fefefe;
-	margin: 15% auto;
-	padding: 20px;
-	border: 1px solid #888;
-	width: 80%;
-}
-.close {
-	color: #aaa;
-	float: right;
-	font-size: 28px;
-	font-weight: bold;
-}
-.close:hover,
-.close:focus {
-	color: black;
-	text-decoration: none;
-	cursor: pointer;
-}
-/* ************************************************************* */
-/* 에러 모달 */
-.error-modal {
-	display: none;
-	position: fixed;
-	z-index: 1;
-	left: 0;
-	top: 0;
-	width: 100%;
-	height: 100%;
-	background-color: rgba(0,0,0,0.4);
-}
-
-.error-modal-content {
-	background-color: #fefefe;
-	margin: 15% auto;
-	padding: 20px;
-	border: 1px solid #888;
-	width: 80%;
-	max-width: 400px;
-	text-align: center;
-	position: relative;
-}
-
-.error-close {
-	position: absolute;
-	top: 0;
-	right: 10px;
-	font-size: 24px;
-	cursor: pointer;
-}
-
-/* ************************************************************* */
 /* 헤더 */
 .header {
 	background-color: rgba(255, 255, 255, 0.8);
@@ -236,7 +172,7 @@ textarea:focus {
 	font-weight: 600;
 }
 
-.header-c:hover {
+.header-d:hover {
 	color:#FE8FB7;
 }
 
@@ -266,8 +202,8 @@ textarea:focus {
 }
 /* ************************************************************* */
 /* ************************************************************* */
-/* 모달 */
-.modal-dialog-maxwidth {
+/* 딜리트 모달 */
+.modal-dialog-delete-maxwidth {
 	max-width: 800px;
 }
 .modal-content-option {
@@ -275,7 +211,7 @@ textarea:focus {
 	margin: 30% auto;
 }
 
-.modal-title-color {
+.modal-title-delete-color {
 	color: #d50000;
 	font-size: 1.5rem;
 }
@@ -289,6 +225,42 @@ textarea:focus {
 	background-color: #d50000;
 }
 /* ************************************************************* */
+/* 헤더 모달 */
+.header-modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.header-modal-content {
+    background-color: #fff;
+    margin: 5% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 50%;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.search-modal-input {
+	margin-top:  -10px;
+	width: 90%;
+	border: 1px solid #303030;
+}
+
+/* 모달 창 열기/닫기 버튼 스타일 */
+#open-header-modal-btn {
+    padding: 10px;
+    color: #fff;
+    border: none;
+    cursor: pointer;
+}
+
 /* ************************************************************* */
 /* 푸터 */
 .footer {
